[bazelboost] Updating WORKSPACE and BUILD.bazel for 1.65.1

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -14,6 +14,7 @@ cc_library(
 	defines = [
 	],
 	deps = [
+		"@com_github_bazelboost_assert//:assert",
 		"@com_github_bazelboost_config//:config"
 	],
 )
